--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,11 +1,11 @@
 body,html {
     height:100%;
     background-color: rgb(10, 10, 10);
-    margin: 0;
   }
   h1, h2,h3,h4,h5,h6{
       color:white;
       font-family: 'Poppins', sans-serif;
+      text-align: center;
   }
   .flex{
       display: flex;
@@ -34,4 +34,29 @@ body,html {
       width: 15em;
       border-radius: 15px;
       border: rgb(32, 32, 32) 15px solid;
+  }
+  .card{
+      margin: 3em;
+  }
+  .card h1,h2,h3,h4,h5,h6{
+      text-align:center;
+  }
+
+  section{
+      height:100%;
+      width:100%;
+  }
+
+
+  .green{
+    background-color:green;
+
+  }
+  .pink{
+    background-color:pink;
+
+  }
+  .yellow{
+    background-color:yellow;
+
   }
