--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,11 +42,12 @@
 
           <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-          {% include sidebar.html %}
+          <!-- {% include sidebar.html %} -->
 
         </header>
 
         {% include links-mobile.html %}
+        </div>
 
       <section>
 
