--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -29,5 +29,6 @@
 
       </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
+    <script src="{{ "/assets/js/custom.js" | relative_url }}"></script>
   </body>
 </html>
